--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,7 @@ build/html/translate/OpenLink.html
 build/html/translate/TgtDownUrls.html
 build/html/translate/TranslateFile.html
 build/html/translate/TranslateText.html
+build/html/convert/ConvertToPdf.html
+build/doctrees/convert/ConvertToPdf.doctree
+build/html/_sources/convert/ConvertToPdf.rst.txt
+build/html/_static/css/custom.css
