--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,4 @@ build/html/convert/ConvertToPdf.html
 build/doctrees/convert/ConvertToPdf.doctree
 build/html/_sources/convert/ConvertToPdf.rst.txt
 build/html/_static/css/custom.css
+.vscode/settings.json
