--- a/.gitignore
+++ b/.gitignore
@@ -1,137 +1,3 @@
-build/doctrees/environment.pickle
-build/doctrees/index.doctree
-build/doctrees/auth/AccessToken.doctree
-build/doctrees/convert/PdfConvertToType.doctree
-build/doctrees/convert/PdfConvertUseOcr.doctree
-build/doctrees/convert/ToPdf.doctree
-build/doctrees/overview/LanguageType.doctree
-build/doctrees/overview/StatusCode.doctree
-build/doctrees/proofreading/CheckProgress.doctree
-build/doctrees/proofreading/TranslatedEditUrl.doctree
-build/doctrees/translate/OpenLink.doctree
-build/doctrees/translate/TgtDownUrls.doctree
-build/doctrees/translate/TranslateFile.doctree
-build/doctrees/translate/TranslateText.doctree
-build/html/.buildinfo
-build/html/genindex.html
-build/html/index.html
-build/html/objects.inv
-build/html/search.html
-build/html/searchindex.js
-build/html/_images/translate-file-process.jpg
-build/html/_sources/index.rst.txt
-build/html/_sources/auth/AccessToken.rst.txt
-build/html/_sources/convert/PdfConvertToType.rst.txt
-build/html/_sources/convert/PdfConvertUseOcr.rst.txt
-build/html/_sources/convert/ToPdf.rst.txt
-build/html/_sources/overview/LanguageType.rst.txt
-build/html/_sources/overview/StatusCode.rst.txt
-build/html/_sources/proofreading/CheckProgress.rst.txt
-build/html/_sources/proofreading/TranslatedEditUrl.rst.txt
-build/html/_sources/translate/OpenLink.rst.txt
-build/html/_sources/translate/TgtDownUrls.rst.txt
-build/html/_sources/translate/TranslateFile.rst.txt
-build/html/_sources/translate/TranslateText.rst.txt
-build/html/_static/basic.css
-build/html/_static/doctools.js
-build/html/_static/documentation_options.js
-build/html/_static/favicon.ico
-build/html/_static/file.png
-build/html/_static/jquery-3.5.1.js
-build/html/_static/jquery.js
-build/html/_static/language_data.js
-build/html/_static/minus.png
-build/html/_static/plus.png
-build/html/_static/pygments.css
-build/html/_static/searchtools.js
-build/html/_static/translate-file-process.jpg
-build/html/_static/translations.js
-build/html/_static/underscore-1.3.1.js
-build/html/_static/underscore.js
-build/html/_static/css/badge_only.css
-build/html/_static/css/theme.css
-build/html/_static/css/fonts/fontawesome-webfont.eot
-build/html/_static/css/fonts/fontawesome-webfont.svg
-build/html/_static/css/fonts/fontawesome-webfont.ttf
-build/html/_static/css/fonts/fontawesome-webfont.woff
-build/html/_static/css/fonts/fontawesome-webfont.woff2
-build/html/_static/css/fonts/lato-bold-italic.woff
-build/html/_static/css/fonts/lato-bold-italic.woff2
-build/html/_static/css/fonts/lato-bold.woff
-build/html/_static/css/fonts/lato-bold.woff2
-build/html/_static/css/fonts/lato-normal-italic.woff
-build/html/_static/css/fonts/lato-normal-italic.woff2
-build/html/_static/css/fonts/lato-normal.woff
-build/html/_static/css/fonts/lato-normal.woff2
-build/html/_static/css/fonts/Roboto-Slab-Bold.woff
-build/html/_static/css/fonts/Roboto-Slab-Bold.woff2
-build/html/_static/css/fonts/Roboto-Slab-Regular.woff
-build/html/_static/css/fonts/Roboto-Slab-Regular.woff2
-build/html/_static/fonts/fontawesome-webfont.eot
-build/html/_static/fonts/fontawesome-webfont.svg
-build/html/_static/fonts/fontawesome-webfont.ttf
-build/html/_static/fonts/fontawesome-webfont.woff
-build/html/_static/fonts/fontawesome-webfont.woff2
-build/html/_static/fonts/FontAwesome.otf
-build/html/_static/fonts/lato-bold-italic.woff
-build/html/_static/fonts/lato-bold-italic.woff2
-build/html/_static/fonts/lato-bold.woff
-build/html/_static/fonts/lato-bold.woff2
-build/html/_static/fonts/lato-normal-italic.woff
-build/html/_static/fonts/lato-normal-italic.woff2
-build/html/_static/fonts/lato-normal.woff
-build/html/_static/fonts/lato-normal.woff2
-build/html/_static/fonts/Roboto-Slab-Bold.woff
-build/html/_static/fonts/Roboto-Slab-Bold.woff2
-build/html/_static/fonts/Roboto-Slab-Light.woff
-build/html/_static/fonts/Roboto-Slab-Light.woff2
-build/html/_static/fonts/Roboto-Slab-Regular.woff
-build/html/_static/fonts/Roboto-Slab-Regular.woff2
-build/html/_static/fonts/Roboto-Slab-Thin.woff
-build/html/_static/fonts/Roboto-Slab-Thin.woff2
-build/html/_static/fonts/Lato/lato-bold.eot
-build/html/_static/fonts/Lato/lato-bold.ttf
-build/html/_static/fonts/Lato/lato-bold.woff
-build/html/_static/fonts/Lato/lato-bold.woff2
-build/html/_static/fonts/Lato/lato-bolditalic.eot
-build/html/_static/fonts/Lato/lato-bolditalic.ttf
-build/html/_static/fonts/Lato/lato-bolditalic.woff
-build/html/_static/fonts/Lato/lato-bolditalic.woff2
-build/html/_static/fonts/Lato/lato-italic.eot
-build/html/_static/fonts/Lato/lato-italic.ttf
-build/html/_static/fonts/Lato/lato-italic.woff
-build/html/_static/fonts/Lato/lato-italic.woff2
-build/html/_static/fonts/Lato/lato-regular.eot
-build/html/_static/fonts/Lato/lato-regular.ttf
-build/html/_static/fonts/Lato/lato-regular.woff
-build/html/_static/fonts/Lato/lato-regular.woff2
-build/html/_static/fonts/RobotoSlab/roboto-slab-v7-bold.eot
-build/html/_static/fonts/RobotoSlab/roboto-slab-v7-bold.ttf
-build/html/_static/fonts/RobotoSlab/roboto-slab-v7-bold.woff
-build/html/_static/fonts/RobotoSlab/roboto-slab-v7-bold.woff2
-build/html/_static/fonts/RobotoSlab/roboto-slab-v7-regular.eot
-build/html/_static/fonts/RobotoSlab/roboto-slab-v7-regular.ttf
-build/html/_static/fonts/RobotoSlab/roboto-slab-v7-regular.woff
-build/html/_static/fonts/RobotoSlab/roboto-slab-v7-regular.woff2
-build/html/_static/js/badge_only.js
-build/html/_static/js/html5shiv-printshiv.min.js
-build/html/_static/js/html5shiv.min.js
-build/html/_static/js/modernizr.min.js
-build/html/_static/js/theme.js
-build/html/auth/AccessToken.html
-build/html/convert/PdfConvertToType.html
-build/html/convert/PdfConvertUseOcr.html
-build/html/convert/ToPdf.html
-build/html/overview/LanguageType.html
-build/html/overview/StatusCode.html
-build/html/proofreading/CheckProgress.html
-build/html/proofreading/TranslatedEditUrl.html
-build/html/translate/OpenLink.html
-build/html/translate/TgtDownUrls.html
-build/html/translate/TranslateFile.html
-build/html/translate/TranslateText.html
-build/html/convert/ConvertToPdf.html
-build/doctrees/convert/ConvertToPdf.doctree
-build/html/_sources/convert/ConvertToPdf.rst.txt
-build/html/_static/css/custom.css
-.vscode/settings.json
+build
+.vscode
+_build
